Agregado el tutorial!

--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -68,6 +68,7 @@
                             <li><a href="{{ urlFor('shwIndex') }}"><i class="zmdi zmdi-home zmdi-hc-fw zmdi-hc-lg"></i>Inicio</a></li>
                             <li><a href="{{ urlFor('shwHistoria') }}">Historia</a></li>
                             <li><a href="{{ urlFor('shwFundamen') }}">Fundamentos</a></li>
+                            <li><a href="{{urlFor('shwTutorial')}}">Como participo</a></li>
                             <li><a href="{{urlFor('shwListaEvento')}}">Cronograma</a></li>
                         </ul>
                         
