--- a/views/email/registro.twig
+++ b/views/email/registro.twig
@@ -1,3 +1,3 @@
-Bienvenido a “Santa Fe construye Educación y Futuro. Diálogos para la Ley Provincial de Educación”. 
+Bienvenido al portal para la “Nueva Ley del Árbol” del Gobierno de Santa Fe. 
 Ingresá a este link para confirmar tu email 
 {{ baseUrl() }}{{ urlFor('runValidUsuario',{'idUsu': id,'token': token}) }}
