--- a/views/lpe/contenido/static/tutorial.twig
+++ b/views/lpe/contenido/static/tutorial.twig
@@ -3,9 +3,9 @@
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 text-justify">
             <h1><strong>
-             COMO PARTICIPAR
+             CÓMO PARTICIPAR
                 </strong></h1>
-                <div class="alert  alert-info">
+                <div class="alert alert-info">
   <p class="lead">
 Te invitamos a conocer el proyecto de ley y a que hagas tu aporte de manera directa o a través de la organización de la que formes parte.
              </p>
