Agregado link a editar perfil

--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -81,7 +81,7 @@
 	<li><a href="{{ urlFor('shwCrearDerecho') }}"><i class="zmdi zmdi-hc-lg zmdi-hc-fw zmdi-plus"></i> Nuevo derecho</a></li>
 	<li><a href="{{urlFor('shwCrearEvento')}}"><i class="zmdi zmdi-hc-lg zmdi-hc-fw zmdi-plus"></i> Nuevo evento</a></li>
 	<li><a href="{{urlFor('shwIndexAdmin')}}"><i class="zmdi zmdi-hc-lg zmdi-hc-fw zmdi-settings"></i> Administrar</a></li>
-
+    <li><a href="{{urlFor('shwModifUsuario')}}"><i class="zmdi zmdi-hc-lg zmdi-hc-fw zmdi-settings"></i> Editar Perfil</a></li> 
     <li class="divider"></li>
 	{% endif %}
     <li><a href="{{urlFor('shwUsuario', {'idUsu': user.id})}}"><i class="zmdi zmdi-hc-lg zmdi-hc-fw zmdi-assignment-account"></i> Ver Perfil</a></li>
