--- a/views/lpe/admin/estadisticas.twig
+++ b/views/lpe/admin/estadisticas.twig
@@ -1,4 +1,4 @@
-{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Participantes{% endblock %} {% block body %}
+{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Estadisticas{% endblock %} {% block body %}
 <div class="container" style=" ">
     <div class="row">
         {% set paginaAdmin = 6 %} {% include '/lpe/admin/listaSecciones.twig' %}
