--- a/views/lpe/usuario/ver.twig
+++ b/views/lpe/usuario/ver.twig
@@ -1,6 +1,6 @@
 {% extends "lpe/master.twig" %}
  {# ----------------------------------------------------------- #} 
- {% block titulo %}Login{%endblock %}
+ {% block titulo %}{{ usuario.nombre }} {{ usuario.apellido }}{%endblock %}
  {% block body %}
 
 <div class="container">
