--- a/views/lpe/admin/listaSecciones.twig
+++ b/views/lpe/admin/listaSecciones.twig
@@ -5,5 +5,6 @@
         <a href="{{ urlFor('shwCrearModerad') }}" class="list-group-item {{paginaAdmin == 3 ? 'active':''}}">Moderadores</a>
         <a href="{{ urlFor('shwCrearImagen') }}" class="list-group-item {{paginaAdmin == 4 ? 'active':''}}">Imagenes</a>
         <a href="{{ urlFor('shwAdmAjuste') }}" class="list-group-item {{paginaAdmin == 5 ? 'active':''}}">Ajustes</a>
+        <a href="{{ urlFor('shwEstadi') }}" class="list-group-item {{paginaAdmin == 6 ? 'active':''}}">Estadisticas</a>
     </div>
 </div>
