tutorial modificado por "Arbolado" sin acento

--- a/views/lpe/contenido/static/tutorial.twig
+++ b/views/lpe/contenido/static/tutorial.twig
@@ -15,8 +15,8 @@ Te invitamos a conocer el proyecto de ley y a que hagas tu aporte de manera dire
              </p>
      <ol>
   <li class="lead text-info">Servicio Público Ambiental</li>
-  <li class="lead text-info">El Árbolado Público</li>
-  <li class="lead text-info">El Árbolado: un compromiso de todos</li>
+  <li class="lead text-info">El Arbolado Público</li>
+  <li class="lead text-info">El Arbolado: un compromiso de todos</li>
   <li class="lead text-info">Plazos</li>
   <li class="lead text-info">Autoridad de Aplicación</li>
   <li class="lead text-info">Excepciones</li>
