--- a/views/lpe/usuario/modificar.twig
+++ b/views/lpe/usuario/modificar.twig
@@ -72,6 +72,8 @@
                                 <button type="submit" href="#" class="btn btn-success btn-sm">Modificar datos</button>
                             </div>
                         </div>
+                        {{ usuario.title }} - 
+                        {{ usuario.address }} - {{ usuario.birthday }} 
                     </form>
                 </li>
             </div>
