--- a/views/lpe/usuario/modificar.twig
+++ b/views/lpe/usuario/modificar.twig
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inputDepartamento" class="col-lg-2 control-label">Fecha Nacimiento</label>
+                            <label for="inputFecha" class="col-lg-2 control-label">Fecha Nacimiento</label>
                             <div class="col-lg-10">
                                  <input id="datepicker" class="form-control">
                                 <input id="guardarFecha" type="hidden">
