--- a/views/lpe/usuario/modificar.twig
+++ b/views/lpe/usuario/modificar.twig
@@ -83,12 +83,12 @@
 <script src="{{ baseUrl() }}/assets/js/jquery-ui/jquery-ui.min.js"></script>
 <script src="{{ baseUrl() }}/assets/js/jquery-ui/datepicker-es.js"></script>
 <script>
-    $(document).ready(function() {
+  $(document).ready(function() {
          $('input[name="nombre"]').val('{{ usuario.nombre }}');
         $('input[name="apellido"]').val('{{ usuario.apellido }}');
         $('input[name="email"]').val('{{ usuario.email }}');
         $('input[name="telefono"]').val('{{ usuario.telefono }}');
-         $('input[name="birthday"]').val('{{ usuario.birthday }}');
+         $('#guardarFecha').val('{{ usuario.birthday|date("Y-m-d") }}');
         $('select[name="address"]').val('{{ usuario.address }}');
         $('select[name="title"]').val('{{ usuario.title }}');
         var tiempo = new Date('{{ usuario.birthday }}');
@@ -106,7 +106,9 @@
 
     $('form').submit(function(e) {
         var fecha = $("#guardarFecha").val();
+        console.log(fecha);
         $('#fecha-final').val(fecha);
     })
+
 
 </script> {% endblock scripts %}
