Cambios Estaticos propuestos por Dardo y Mariana aplicados.

--- a/views/lpe/contenido/derecho/ver.twig
+++ b/views/lpe/contenido/derecho/ver.twig
@@ -61,7 +61,7 @@
                 <div class="accion clearfix">
                     <div  style="margin-left:20px" class="pull-right">
                         {% set ptj = (seccion.votos_alta * 3) + (seccion.votos_media * 2) + (seccion.votos_baja * 1) %}
-                        <span class="label label-primary" style="padding: 10px 8px 8px; font-size: 10px;">&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></span>
+                        <span class="text-info" style="padding: 10px 8px 8px; font-size: 15px">&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></span>
                     </div>
                     <div style="font-size: 14px; line-height: 21px;">{{seccion.descripcion|bbCode}}</div>
                     <!--<h6><b>Importancia de la acción</b></h6>
@@ -70,7 +70,11 @@
                         <a href="javascript:votarSeccion({{seccion.id}},2)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 2)) ? 'btn-primary disabled' : 'btn-default'}}">Media</a>
                         <a href="javascript:votarSeccion({{seccion.id}},1)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 1)) ? 'btn-primary disabled' : 'btn-default'}}">Baja</a>
                     </div>-->
-                    <div class="btn-group btn-group-justified btn-group-sm" style="margin-top: 15px;">
+                    {% set comentariosSeccion = seccion.comentarios|length %}
+                                {% for comentario in seccion.comentarios %}
+                                {% set comentariosSeccion = comentariosSeccion + comentario.respuestas|length %}
+                                {% endfor %}
+                    <div class="btn-group btn-group-justified btn-group-sm hidden-xs " style="margin-top: 15px;">
                             <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',3)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">
                                 Muy importante
                                 {% if user and (user.patrulla_id != null) %}
@@ -89,10 +93,27 @@
                                 &nbsp;<span class="badge" style="padding-top: 3px; padding-bottom: 1px;">{{seccion.votos_baja}}</span>
                                 {% endif %}
                                 </a>
-                                {% set comentariosSeccion = seccion.comentarios|length %}
-                                {% for comentario in seccion.comentarios %}
-                                {% set comentariosSeccion = comentariosSeccion + comentario.respuestas|length %}
-                                {% endfor %}
+                            <a href="javascript:void(0)" data-toggle="modal" data-target="#comentarios{{ seccion.id }}" class="btn btn-info">Participá <i class="zmdi zmdi-comments zmdi-hc-lg zmdi-hc-fw"></i> {{ comentariosSeccion }}</a>
+                        </div>
+                        <div class="btn-group btn-group-vertical btn-block btn-group-sm hidden-sm hidden-md hidden-lg" style="margin-top: 15px;">
+                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',3)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">
+                                Muy importante
+                                {% if user and (user.patrulla_id != null) %}
+                                &nbsp;<span class="badge" style="padding-top: 3px; padding-bottom: 1px;">{{seccion.votos_alta}}</span>
+                                {% endif %}
+                                </a>
+                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',2)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 2)) ? 'btn-primary disabled' : 'btn-default'}}">
+                                Importante
+                                {% if user and (user.patrulla_id != null) %}
+                                &nbsp;<span class="badge" style="padding-top: 3px; padding-bottom: 1px;">{{seccion.votos_media}}</span>
+                                {% endif %}
+                                </a>
+                            <a href="{{ user ? 'javascript:votarSeccion(' ~ seccion.id ~',1)' : urlFor('shwLogin')}}" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 1)) ? 'btn-primary disabled' : 'btn-default'}}">
+                                Poco importante
+                                {% if user and (user.patrulla_id != null) %}
+                                &nbsp;<span class="badge" style="padding-top: 3px; padding-bottom: 1px;">{{seccion.votos_baja}}</span>
+                                {% endif %}
+                                </a>
                             <a href="javascript:void(0)" data-toggle="modal" data-target="#comentarios{{ seccion.id }}" class="btn btn-info">Participá <i class="zmdi zmdi-comments zmdi-hc-lg zmdi-hc-fw"></i> {{ comentariosSeccion }}</a>
                         </div>
                     {% include 'lpe/contenido/derecho/comentarioModal.twig' %}
