--- a/views/lpe/contenido/static/antecedentes.twig
+++ b/views/lpe/contenido/static/antecedentes.twig
@@ -1,10 +1,15 @@
 {% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Antedecentes{% endblock %} {% block body %}
-<div class="container" style=" ">
+<div class="container-fluid" style="background-image: url(http://www.santafeciudad.gov.ar/media/imgs/Parque%20Garay1.jpg);background-size: cover;background-attachment: fixed;">
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
-            <h1><strong>
+                        <div class="row">
+                <div class="col-xs-12 col-sm-10 col-sm-offset-1" style="background-color: #FFF;">
+                                <h1 class="hidden-xs hidden-sm"><strong>
              INSTANCIAS DE PARTICIPACIÓN
                 </strong></h1>
+                <h4 class="hidden-md hidden-lg"><strong>
+             INSTANCIAS DE PARTICIPACIÓN
+                </strong></h4>
              <p class="lead">
 El Ministerio de Educación se encuentra desarrollando instancias participativas que constituyen un valioso inicio en la camino de construcción de esta Ley Provincial de Educación.
              </p>
@@ -28,6 +33,8 @@ El Ministerio de Educación se encuentra desarrollando instancias participativas
                 <i class="zmdi zmdi-check zmdi-hc-fw zmdi-hc-lg"></i> 5 foros/mesas de diálogo con autoridades de gobiernos locales.   
                 </li>
             </ul>
+                </div>
+                        </div>
         </div>
     </div>
 </div>
