--- a/views/lpe/contenido/static/historia.twig
+++ b/views/lpe/contenido/static/historia.twig
@@ -1,10 +1,15 @@
 {% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Historia{% endblock %} {% block body %}
-<div class="container" style=" ">
+<div class="container-fluid" style="background-image: url(http://www.santafeciudad.gov.ar/media/imgs/Parque%20Garay1.jpg);background-size: cover;background-attachment: fixed;">
     <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
-            <h1><strong>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2" style="background-color: #FFF;">
+                        <div class="row">
+                <div class="col-xs-12 col-sm-10 col-sm-offset-1" style="background-color: #FFF;">
+            <h1 class="hidden-xs hidden-sm"><strong>
              HISTORIA
                 </strong></h1>
+                <h4 class="hidden-md hidden-lg"><strong>
+             HISTORIA
+                </strong></h4>
              <p class="lead">
 En el año 1935 se realizó un Inventario Forestal Nacional. En ese momento se determinó que la Provincia contaba con  5.900.000 hectáreas de bosques no insular.
              </p>
@@ -14,6 +19,8 @@ El relevamiento realizado en 2008 a raíz de la adhesión a la ley Nacional de P
              <p class="lead">
                  En aproximadamente 80 años se perdieron algo más de 4.000.000 de hectáreas cubiertas de masa forestal.
              </p>
+                </div>
+                        </div>
         </div>
     </div>
 </div>
