--- a/views/lpe/contenido/static/propuesta.twig
+++ b/views/lpe/contenido/static/propuesta.twig
@@ -1,10 +1,15 @@
 {% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Propuesta{% endblock %} {% block body %}
-<div class="container" style=" ">
+<div class="container-fluid" style="background-image: url(http://www.santafeciudad.gov.ar/media/imgs/Parque%20Garay1.jpg);background-size: cover;background-attachment: fixed;">
     <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
-            <h1><strong>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2" style="background-color: #FFF;">
+                        <div class="row">
+                <div class="col-xs-12 col-sm-10 col-sm-offset-1" style="background-color: #FFF;">
+            <h1 class="hidden-xs hidden-sm"><strong>
              SANTA FE CONSTRUYE EDUCACIÓN Y FUTURO
                 </strong></h1>
+                <h4 class="hidden-md hidden-lg"><strong>
+             SANTA FE CONSTRUYE EDUCACIÓN Y FUTURO
+                </strong></h4>
              <p class="lead">
 Desde el Gobierno de Santa Fe se asume a la Educación como promotora de igualdad, emancipación y libertad ciudadana, para posibilitar la construcción colectiva de las condiciones sociales y culturales generadoras de la convivencia y la vida en democracia; priorizando la igualdad de derechos estudiantiles para el acceso, permanencia, aprendizaje y egreso del sistema educativo.
              </p>
@@ -12,6 +17,8 @@ Desde el Gobierno de Santa Fe se asume a la Educación como promotora de igualda
 “Santa Fe construye Educación y Futuro. Diálogos para la Ley Provincial de Educación” recoge los sentidos del encuentro, el diálogo, la participación y el compromiso por parte de la ciudadanía, como forma de construcción y transformación de la educación para incidir en el presente y el futuro. La propuesta plantea un debate amplio, profundo y diverso sobre la educación que la sociedad santafesina necesita.  
              </p>
              <p class="lead"><a href="#">Ver mas</a></p>
+                </div>
+                        </div>
         </div>
     </div>
 </div>
