--- a/views/lpe/contenido/static/tos.twig
+++ b/views/lpe/contenido/static/tos.twig
@@ -1,10 +1,13 @@
 {% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Terminos y condiciones{% endblock %} {% block body %}
-<div class="container" style=" ">
+<div class="container" style="background-image: url(http://www.santafeciudad.gov.ar/media/imgs/Parque%20Garay1.jpg);background-size: cover;background-attachment: fixed;">
     <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
-            <h1><strong>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2" style="background-color: #FFF;">
+                <h1 class="hidden-xs hidden-sm"><strong>
              TERMINOS Y CONDICIONES DE LA PLATAFORMA
                 </strong></h1>
+                <h4 class="hidden-md hidden-lg"><strong>
+             TERMINOS Y CONDICIONES DE LA PLATAFORMA
+                </strong></h4>
             <div style="font-size: 14px;line-height: 21px;">
                 {{ tos.value|bbCode }}
             </div>
