--- a/views/lpe/contenido/static/tutorial.twig
+++ b/views/lpe/contenido/static/tutorial.twig
@@ -1,10 +1,15 @@
 {% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Como participo{% endblock %} {% block body %}
-<div class="container" style=" ">
+<div class="container-fluid" style="background-image: url(http://www.santafeciudad.gov.ar/media/imgs/Parque%20Garay1.jpg);background-size: cover;background-attachment: fixed;">
     <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 text-justify">
-            <h1><strong>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 text-justify" style="background-color: #FFF;">
+            <div class="row">
+                <div class="col-xs-12 col-sm-10 col-sm-offset-1" style="background-color: #FFF;">
+                <h1 class="hidden-xs hidden-sm"><strong>
              CÓMO PARTICIPAR
                 </strong></h1>
+                <h4 class="hidden-md hidden-lg"><strong>
+             CÓMO PARTICIPAR
+                </strong></h4>
                 <div class="alert alert-info">
   <p class="lead">
 Te invitamos a conocer el proyecto de ley y a que hagas tu aporte de manera directa o a través de la organización de la que formes parte.
@@ -14,19 +19,24 @@ Te invitamos a conocer el proyecto de ley y a que hagas tu aporte de manera dire
 <i class="zmdi zmdi-info zmdi-hc-fw zmdi-hc-lg text-primary"></i> En la página principal encontrarás 8 destacados; cada uno representa un capítulo de la Ley con sus respectivos artículos: Hacé click y conocelos!
              </p>
      <ol>
-  <li class="lead text-info">Servicio Público Ambiental</li>
-  <li class="lead text-info">El Arbolado Público</li>
-  <li class="lead text-info">El Arbolado: un compromiso de todos</li>
-  <li class="lead text-info">Plazos</li>
-  <li class="lead text-info">Autoridad de Aplicación</li>
-  <li class="lead text-info">Excepciones</li>
-  <li class="lead text-info">Fondo Santafesino del Arbolado</li>
-  <li class="lead text-info">Sanciones</li>
+  <li class="lead text-info"><a href="{{ urlFor('shwDerecho',{'idDer': 1})}}">Servicio Público Ambiental</a></li>
+  <li class="lead text-info"><a href="{{ urlFor('shwDerecho',{'idDer': 2})}}">El Arbolado Público</a></li>
+  <li class="lead text-info"><a href="{{ urlFor('shwDerecho',{'idDer': 3})}}">El Arbolado: un compromiso de todos</a></li>
+  <li class="lead text-info"><a href="{{ urlFor('shwDerecho',{'idDer': 4})}}">Plazos</a></li>
+  <li class="lead text-info"><a href="{{ urlFor('shwDerecho',{'idDer': 5})}}">Autoridad de Aplicación</a></li>
+  <li class="lead text-info"><a href="{{ urlFor('shwDerecho',{'idDer': 6})}}">Excepciones</a></li>
+  <li class="lead text-info"><a href="{{ urlFor('shwDerecho',{'idDer': 7})}}">Fondo Santafesino del Arbolado</a></li>
+  <li class="lead text-info"><a href="{{ urlFor('shwDerecho',{'idDer': 8})}}">Sanciones</a></li>
 </ol>
  <p class="lead">
 <i class="zmdi zmdi-info zmdi-hc-fw zmdi-hc-lg text-primary"></i> Dentro de cada capítulo se encuentran los artículos de la ley correspondientes al mismo. Bajo cada artículo podés darnos tu opinión si el tema te parece...
              </p>
-                  <div class="btn-group btn-group-justified btn-group" style="margin-top: 15px;margin-bottom: 30px;">
+                  <div class="btn-group btn-group-justified btn-group hidden-xs hidden-sm" style="margin-top: 15px;margin-bottom: 30px;">
+<a href="javascript:void(0)" class="btn btn-default">Muy importante</a>
+                            <a href="javascript:void(0)" class="btn btn-default">Importante</a>
+                            <a href="javascript:void(0)" class="btn btn-default">Poco importante</a>
+                  </div>
+                  <div class="btn-group btn-group-vertical btn-block  hidden-md hidden-lg" style="margin-top: 15px;margin-bottom: 30px;">
 <a href="javascript:void(0)" class="btn btn-default">Muy importante</a>
                             <a href="javascript:void(0)" class="btn btn-default">Importante</a>
                             <a href="javascript:void(0)" class="btn btn-default">Poco importante</a>
@@ -34,8 +44,13 @@ Te invitamos a conocer el proyecto de ley y a que hagas tu aporte de manera dire
                   <p class="lead">
 Podes cambiar tu voto cuando quieras. Tu voto aparecerá de la siguiente forma...             
 </p>
-                  <div class="btn-group btn-group-justified btn-group" style="margin-top: 15px;margin-bottom: 30px;">
+                  <div class="btn-group btn-group-justified btn-group hidden-xs hidden-sm" style="margin-top: 15px;margin-bottom: 30px;">
 <a href="javascript:void(0)" class="btn btn-primary disabled">Muy importante</a>
+                            <a href="javascript:void(0)" class="btn btn-default">Importante</a>
+                            <a href="javascript:void(0)" class="btn btn-default">Poco importante</a>
+                  </div>
+                  <div class="btn-group  btn-group-vertical btn-block  hidden-md hidden-lg" style="margin-top: 15px;margin-bottom: 30px;">
+<a href="javascript:void(0)" class="btn btn-default">Muy importante</a>
                             <a href="javascript:void(0)" class="btn btn-default">Importante</a>
                             <a href="javascript:void(0)" class="btn btn-default">Poco importante</a>
                   </div>
@@ -45,6 +60,9 @@ Podes cambiar tu voto cuando quieras. Tu voto aparecerá de la siguiente forma..
              <div class="text-center">
                  <a href="javascript:void(0)" class="btn btn-info" style="margin-top: 15px;margin-bottom: 30px;">Participá <i class="zmdi zmdi-comments zmdi-hc-lg zmdi-hc-fw"></i> 13</a>
              </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
