--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -28,21 +28,25 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <!-- Piwik -->
+<!-- Piwik -->
 <script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(["setDomains", ["*.www.santafe.gov.ar/leyeducacion"]]);
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//westad.santafe.gov.ar/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', 31]);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-  })();
+   var _paq = _paq || [];
+   _paq.push(["setDomains",
+["*.www.santafe.gob.ar/leydelarbol","*.www.santafe.gov.ar/leydelarbol"]]);
+   _paq.push(['trackPageView']);
+   _paq.push(['enableLinkTracking']);
+   (function() {
+     var u="//westad.santafe.gov.ar/";
+     _paq.push(['setTrackerUrl', u+'piwik.php']);
+     _paq.push(['setSiteId', 32]);
+     var d=document, g=d.createElement('script'),
+s=d.getElementsByTagName('script')[0];
+     g.type='text/javascript'; g.async=true; g.defer=true;
+g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+   })();
 </script>
-<noscript><p><img src="//westad.santafe.gov.ar/piwik.php?idsite=31" style="border:0;" alt="" /></p></noscript>
+<noscript><p><img src="//westad.santafe.gov.ar/piwik.php?idsite=32"
+style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 </head>
 
