Fix de los comentarios y de poder ver los votos en los comentarios

--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -114,14 +114,14 @@ http://ryanfait.com/
 }
 
 .navbar-bottom-colors {
-    background-image: url("../img/tramasf.png");
+    background-image: url("../img/tramasf.jpg");
     height: 6px;
     margin-bottom: 30px;
     background-repeat: repeat-x;
     background-position: center top;
 }
 .barra-footer{
-    background-image: url("../img/tramasf.png");
+    background-image: url("../img/tramasf.jpg");
     height: 6px;
     background-repeat: repeat-x;
     background-position: top top;
