--- a/views/lpe/contenido/derecho/comentario.twig
+++ b/views/lpe/contenido/derecho/comentario.twig
@@ -6,24 +6,28 @@
      </div>
     <div class="col-xs-10 col-sm-9">
         <span class="pull-left text-info" style="margin-top:0"><strong>{{ comentario.autor.nombre }} {{ comentario.autor.apellido }}</strong></span>
+          {% if comentario.autor.patrulla_id != null %}
+         <span class="text-warning" data-toggle="tooltip" data-placement="right" data-original-title="Oficial"><i class="fa fa-check fa-fw"></i></span>
+        {% endif %}
         <br>
         <p class="comentario" style="margin-bottom:0">
             <span class="pull-right"></span>
             {{ comentario.cuerpo|nl2br }}
         </p>
-            {% if user %}
         <ul class="list-inline" style="border-bottom: 1px solid #83c8ff;">
+            {% if user %}
             <li><a href="javascript:votarComentario({{comentario.id}},1)" style="text-decoration:none;"><span class="text-success" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><b><i class="zmdi zmdi-long-arrow-up"></i> {{comentario.votos|length}}</a></b></li>
             <li><a href="javascript:votarComentario({{comentario.id}},-1)" style="text-decoration:none;"><span class="text-danger" data-toggle="tooltip" data-placement="bottom" data-original-title="No me gusta"><b><i class="zmdi zmdi-long-arrow-down"></i></a></b></li>
             <li><a href="javascript:verBoxResponder({{comentario.id}})"><small>Responder</small></a></li>
             {% if user and (user.patrulla_id != null) %}
             <li><a href="javascript:sancionar({{comentario.autor.id}})"><small><i class="zmdi zmdi-alert-triangle zmdi-hc-fw zmdi-hc-lg"></i>Moderar</small></a></li>
-            {% endif %} 
-            {% if user and (user.patrulla_id != null) %}
             <li><a href="javascript:eliminarComentario({{comentario.id}})"><small><i class="zmdi zmdi-close zmdi-hc-lg zmdi-hc-fw"></i>Eliminar</small></a></li>
             {% endif %}
+              {% else %}
+                <li><a href="{{urlFor('shwLogin')}}" style="text-decoration:none;"><span class="text-success" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><b><i class="zmdi zmdi-long-arrow-up"></i> {{respuesta.votos|length }}</a></b></li>
+            <li><a href="{{urlFor('shwLogin')}}" style="text-decoration:none;"><span class="text-danger" data-toggle="tooltip" data-placement="bottom" data-original-title="No me gusta"><b><i class="zmdi zmdi-long-arrow-down"></i></a></b></li>
+            {% endif %}  
         </ul>
-            {% endif %} 
         <div id="respComentario-{{comentario.id}}" class="well well" style="display:none">
             <form class="form-horizontal" action="{{ urlFor('runComentar', {'tipoRaiz': 'comentario', 'idRaiz': comentario.id }) }}" method="POST">
                 <div class="form-group" style="margin-bottom:0">
@@ -39,7 +43,6 @@
             </form>
         </div>
         <div class="lista-respuestas">
-
             {% if comentario.respuestas|length > 0 %}
             {% for respuesta in comentario.respuestas %}
             <div class="col-xs-1 text-center">
@@ -50,12 +53,15 @@
             <div class="col-xs-11" style="padding-right:0">
                 <span class="pull-left text-info" style="margin-top:0"><strong>
                     {{ respuesta.autor.nombre }} {{ respuesta.autor.apellido }}</strong></span>
+                      {% if comentario.autor.patrulla_id != null %}
+         <span class="text-warning" data-toggle="tooltip" data-placement="right" data-original-title="Oficial"><i class="fa fa-check fa-fw"></i></span>
+        {% endif %}
                 <br>
                 <p class="comentario" style="margin-bottom:0">
                     {{ respuesta.cuerpo|nl2br }}
                 </p>
-                    {% if user %}
                 <ul class="list-inline" style="border-bottom: 1px solid #83c8ff;">
+                    {% if user %}
             <li><a href="javascript:votarComentario({{respuesta.id}},1)" style="text-decoration:none;"><span class="text-success" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><b><i class="zmdi zmdi-long-arrow-up"></i> {{respuesta.votos|length }}</a></b></li>
             <li><a href="javascript:votarComentario({{respuesta.id}},-1)" style="text-decoration:none;"><span class="text-danger" data-toggle="tooltip" data-placement="bottom" data-original-title="No me gusta"><b><i class="zmdi zmdi-long-arrow-down"></i></a></b></li>
             <li><a href="javascript:verBoxResponder({{comentario.id}})"><small>Responder</small></a></li>
@@ -63,8 +69,11 @@
                     <li><a href="javascript:sancionar({{respuesta.autor.id}})"><small><i class="zmdi zmdi-alert-triangle zmdi-hc-fw zmdi-hc-lg"></i>Moderar</small></a></li>
                     <li><a href="#"><small><i class="zmdi zmdi-close zmdi-hc-lg zmdi-hc-fw"></i>Eliminar</small></a></li>
                     {% endif %}
-                </ul>
+            {% else %}
+                <li><a href="{{urlFor('shwLogin')}}" style="text-decoration:none;"><span class="text-success" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><b><i class="zmdi zmdi-long-arrow-up"></i> {{respuesta.votos|length }}</a></b></li>
+            <li><a href="{{urlFor('shwLogin')}}" style="text-decoration:none;"><span class="text-danger" data-toggle="tooltip" data-placement="bottom" data-original-title="No me gusta"><b><i class="zmdi zmdi-long-arrow-down"></i></a></b></li>
             {% endif %} 
+                </ul>
             </div>
                 {% endfor %}
                  {% endif %}
