cambios de educacion volcados aca

--- a/views/lpe/admin/exportar.twig
+++ b/views/lpe/admin/exportar.twig
@@ -16,14 +16,15 @@
   </thead>
   <tbody>
     <tr>
-      <td>Comentarios en derechos</td>
-      <td class="text-center"><a href="javascript:void(0)" class="btn btn-link btn-xs">Descargar<i class="fa fa-download fa-fw"></i></a></td>
-    </tr>
-    <tr>
       <td>Listado de emails de usuarios</td>
-      <td class="text-center"><a href="javascript:void(0)" class="btn btn-link btn-xs">Descargar<i class="fa fa-download fa-fw"></i></a></td>
+      <td class="text-center"><a href="{{ urlFor('shwEmails') }}" class="btn btn-link btn-xs">Descargar<i class="fa fa-download fa-fw"></i></a></td>
     </tr>
-    
+    {% for i in 1..8 %}
+      <tr>
+        <td>Comentarios en capítulo {{ i }}</td>
+        <td class="text-center"><a href="{{ urlFor('shwComments', {'idDer': i}) }}" class="btn btn-link btn-xs">Descargar<i class="fa fa-download fa-fw"></i></a></td>
+      </tr>
+    {% endfor %}
   </tbody>
 </table> 
         </div>
