--- a/views/lpe/contenido/static/fundamentos.twig
+++ b/views/lpe/contenido/static/fundamentos.twig
@@ -10,6 +10,11 @@
                 <h4 class="hidden-md hidden-lg"><strong>
              FUNDAMENTOS
                 </strong></h4>
+
+<div class="text-center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oyswloER3bg" frameborder="0" allowfullscreen></iframe>
+</div>
+
              <p class="lead">
 
 
